kube/deploy/services/matrix/coturn/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: turn-tcp-tls
spec:
  entryPoints: [matrix-tcp-tls]
  routes:
    - match: HostSNI(`*`)
      services:
        - name: coturn
          port: 5349
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: turn-tcp
spec:
  entryPoints: [matrix-tcp]
  routes:
    - match: HostSNI(`*`)
      services:
        - name: coturn
          port: 3478
